# rust-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE-APACHE  README.md  cargo-generate.toml  contributing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  template_values.toml
examples/: README.md
examples/gen-axum/: .dockerignore  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  deny.toml  flake.nix
examples/gen-axum/.github/: CODEOWNERS
examples/gen-axum/config/: settings.toml
examples/gen-axum/docs/specs/: latest.json
examples/gen-axum/src/: docs.rs  error.rs  lib.rs  main.rs  settings.rs
examples/gen-axum/src/extract/: json.rs  mod.rs
examples/gen-axum/src/headers/: mod.rs
examples/gen-axum/src/middleware/: logging.rs  request_ext.rs  request_ulid.rs  reqwest_retry.rs  reqwest_tracing.rs  runtime.rs
examples/gen-axum/src/middleware/client/: metrics.rs
examples/gen-axum/src/routes/: health.rs  ping.rs
examples/gen-axum/src/test_utils/: rvg.rs
examples/gen-axum/src/tracing_layers/: format_layer.rs  storage_layer.rs
examples/gen-axum/tests/: integration_test.rs
rust/: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CONTRIBUTING.md  Cargo.axum.toml  Cargo.toml  Dockerfile.glibc  Dockerfile.musl  README.axum.md  README.md  cargo-generate.toml  codecov.yml  deny.toml  final-script.rhai  flake.nix  init-msg.rhai  pre-script.rhai  release-please-config.json
rust+wasm/: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.axum.md  README.md  SECURITY.md  cargo-generate.toml  codecov.yml  deny.toml  final-msg.rhai  final-script.rhai  flake.nix  init-msg.rhai  pre-script.rhai  release-please-config.json  rust-toolchain.toml
rust+wasm/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
rust+wasm/.github/ISSUE_TEMPLATE/: feature_request.md
rust+wasm/.github/workflows/: bench.yml  coverage.yml  docker.yml  release.yml  tests_and_checks.yml
rust+wasm/docker/: Dockerfile.glibc  Dockerfile.musl
rust+wasm/examples/: Cargo.toml
rust+wasm/{{project-name}}/: Cargo.axum.toml  Cargo.toml  README.md
rust+wasm/{{project-name}}-benches/: Cargo.toml
rust+wasm/{{project-name}}-benches/benches/: a_benchmark.rs
rust+wasm/{{project-name}}-wasm/: Cargo.toml  README.md
rust+wasm/{{project-name}}-wasm/src/: lib.rs
rust+wasm/{{project-name}}-wasm/tests/: web.rs
rust+wasm/{{project-name}}/config/: settings.toml
rust+wasm/{{project-name}}/docs/specs/: latest.json
rust+wasm/{{project-name}}/src/: lib.rs
rust+wasm/{{project-name}}/src.axum/: docs.rs  error.rs  lib.rs  main.rs  router.rs  tracer.rs
rust+wasm/{{project-name}}/src.axum/extract/: json.rs
rust+wasm/{{project-name}}/src.axum/headers/: header.rs
rust+wasm/{{project-name}}/src.axum/metrics/: process.rs  prom.rs
rust+wasm/{{project-name}}/src.axum/middleware/: logging.rs  metrics.rs  mod.rs  reqwest_retry.rs  reqwest_tracing.rs  runtime.rs
rust+wasm/{{project-name}}/src.axum/middleware/client/: metrics.rs  mod.rs
rust+wasm/{{project-name}}/src.axum/routes/: fallback.rs
rust+wasm/{{project-name}}/src.axum/tracing_layers/: format_layer.rs  metrics_layer.rs
rust+wasm/{{project-name}}/tests/: integration_test.axum.rs  integration_test.rs
rust/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
rust/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
rust/.github/workflows/: audit.yml  bench.yml  coverage.yml  docker.yml  release.yml  tests_and_checks.yml
rust/benches/: a_benchmark.rs
rust/src/: lib.rs  main.rs
rust/src.axum/: error.rs  lib.rs  main.rs  settings.rs
rust/src.axum/extract/: json.rs
rust/src.axum/headers/: header.rs
rust/src.axum/metrics/: mod.rs  process.rs
rust/src.axum/middleware/: logging.rs  metrics.rs  reqwest_retry.rs  runtime.rs
rust/src.axum/middleware/client/: metrics.rs
rust/src.axum/routes/: fallback.rs  health.rs  mod.rs
rust/src.axum/test_utils/: rvg.rs
rust/src.axum/tracing_layers/: format_layer.rs  mod.rs
rust/tests/: integration_test.axum.rs  integration_test.rs
