[workspace]
members = [
	"examples",
	"{{project-name}}",{%if bench %}
	"{{project-name}}-benches",{% endif %}
	"{{project-name}}-wasm"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
