[workspace]
members = [
	"examples",
	"{{project-name}}",{%if bench %}
	"{{project-name}}-benches",{% endif %}
	"{{project-name}}-wasm"
]

[profile.release.{{project-name}}-wasm]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s" # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
