[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
keywords = []
categories = []{% if license == "Apache" %}
{% if crate_type == "lib" %}include = ["/src", "/examples"{% if bench %}, "/benches"{% endif %}, "README.md", "LICENSE"]{% else %}
include = ["/src"{% if bench %}, "/benches"{% endif %}, "README.md", "LICENSE"]{% endif %}
license = "Apache-2.0"
{% elsif license == "MIT" %}
{% if crate_type == "lib" %}include = ["/src", "/examples"{% if bench %}, "/benches"{% endif %}, "README.md", "LICENSE"]{% else %}
include = ["/src"{% if bench %}, "/benches"{% endif %}, "README.md", "LICENSE"]{% endif %}
license = "MIT"
{% else %}
{% if crate_type == "lib" %}include = ["/src", "/examples"{% if bench %}, "/benches"{% endif %}, "README.md", "LICENSE-APACHE", "LICENSE-MIT"]{% else %}
include = ["/src"{% if bench %}, "/benches"{% endif %}, "README.md", "LICENSE-APACHE", "LICENSE-MIT"]{% endif %}
license = "Apache-2.0 or MIT"
{% endif %}readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/{{project-name}}"
repository = "https://github.com/{{github-name}}/{{repo-name}}"
authors = ["{{authors}}"]
{% if crate_type == "lib" %}
[lib]
path = "src/lib.rs"{% if bench %}
bench = false{% endif %}
{% else %}
[lib]
path = "src/lib.rs"{% if bench %}
bench = false{% endif %}
doctest = true

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
doc = false{% if bench %}
bench = false{% endif %}
{% endif %}{% if bench %}
[[bench]]
name = "a_benchmark"
harness = false
required-features = ["test_utils"]
{% endif %}{% if crate_type == "lib" %}
[[example]]
name = "counterparts"
path = "examples/counterparts.rs"
{% endif %}
[dependencies]{% if crate_type == "bin" %}
anyhow = "1.0"{% endif %}{% if bench %}
proptest = { version = "1.0", optional = true }{% endif %}{% if crate_type == "lib" %}
thiserror = "1.0"
tracing = "0.1"{% else %}
tracing = "0.1"
tracing-subscriber = "0.3"{% endif %}
{% if bench %}
[dev-dependencies]
criterion = "0.4"
proptest = "1.0"
{% endif %}
[features]
default = []{% if bench %}
test_utils = ["proptest"]{% endif %}

[metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
# [profile.release]
# Do not perform backtrace for panic on release builds.
## panic = 'abort'
# Perform optimizations on all codegen units.
## codegen-units = 1
# Tell `rustc` to optimize for small code size.
## opt-level = "s" # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
## lto = true
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false
# Strip debug symbols
## strip = "symbols"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
