[package]
name = "{{project-name}}-benches"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["{{authors}}"]

[dependencies]
{{project-name}} = { path = "../{{project-name}}", features = ["test_utils"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "a_benchmark"
harness = false
