[package]
name = "{{project-name}}-wasm"
version = "0.1.0"
description = "{{description}}"
keywords = []
categories = []{% if license == "Apache" %}
include = ["/src", "README.md", "LICENSE"]
license = "Apache-2.0"
{% elsif license == "MIT" %}
include = ["/src", "README.md", "LICENSE"]
license = "MIT"
{% else %}
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
{% endif %}readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/{{project-name}}-wasm"
repository = "https://github.com/{{github-name}}/{{repo-name}}/tree/main/{{project-name}}-wasm"
authors = ["{{authors}}"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }{% if crate_type == "lib" %}
tracing = "0.1"{% else %}
tracing = "0.1"{% endif %}
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
{% if crate_type == "lib" %}{{project-name}} = { path = "../{{project-name}}", version = "0.1" }
{% endif %}
[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["js"]
full = ["js", "web"]
js = [
  "console_error_panic_hook",
  "js-sys",
  "wasm-bindgen",
  "wasm-bindgen-futures"
]
web = ["web-sys"]
