[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
keywords = []
categories = []{% if license == "Apache" %}
license = "Apache"
include = ["/src", "README.md", "LICENSE"]
{% elsif license == "MIT" %}
include = ["/src", "README.md", "LICENSE"]
license = "MIT"
{% else %}
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
{% endif %}readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/{{project-name}}"
repository = "https://github.com/{{github-name}}/{{project-name}}/tree/main/{{project-name}}"
authors = ["{{authors}}"]
{% if crate_type == "lib" %}
[lib]
path = "src/lib.rs"
{% else %}
[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
doc = true
{% endif %}
[dependencies]
anyhow = "1.0"{% if bench %}
proptest = { version = "1.0", optional = true }{% endif %}
{% if crate_type == "lib" %}tracing = "0.1"
{% else %}
tracing = "0.1"
tracing-subscriber = "0.3"
{% endif %}
[features]
default = []{% if bench %}
test_utils = ["proptest"]{% endif %}
