[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
keywords = []
categories = []{% if license == "Apache" %}
license = "Apache-2.0"
include = ["/src", "README.md", "LICENSE"]
{% elsif license == "MIT" %}
include = ["/src", "README.md", "LICENSE"]
license = "MIT"
{% else %}
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
{% endif %}readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/{{project-name}}"
repository = "https://github.com/{{github-name}}/{{repo-name}}/tree/main/{{project-name}}"
authors = ["{{authors}}"]
{% if crate_type == "lib" %}
[lib]
path = "src/lib.rs"
{% else %}
[lib]
path = "src/lib.rs"
doctest = true

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
doc = true
{% endif %}
[dependencies]{% if crate_type == "bin" %}
anyhow = "1.0"{% endif %}{% if bench %}
proptest = { version = "1.0", optional = true }{% endif %}{% if crate_type == "lib" %}
thiserror = "1.0"
tracing = "0.1"{% else %}
tracing = "0.1"
tracing-subscriber = "0.3"
{% endif %}{% if bench %}
[dev-dependencies]
proptest = "1.0"
{% endif %}
[features]
default = []{% if bench %}
test_utils = ["proptest"]{% endif %}

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
